--- a/src/main/resources/vue/inline/styles.css
+++ b/src/main/resources/vue/inline/styles.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 html {
     background-color: #f5f5f5;
 }
@@ -5,4 +9,8 @@ html {
 .dialog {
     padding: 20px;
     justify-content: flex-end;
+}
+
+img {
+    display: block;
 }
